compile_tests/tests/compile-fail/abi_ref_return.rs
extern crate savefile;
extern crate savefile_abi;
extern crate savefile_derive;
use std::collections::HashMap;
use savefile::prelude::*;
use savefile::{Deserialize, Deserializer, Serialize, Serializer};
use std::fmt::Debug;
use std::io::{BufWriter, Cursor, Write};
use savefile_abi::AbiConnection;
use savefile_derive::savefile_abi_exportable;

#[savefile_abi_exportable(version = 0)]
pub trait ExampleTrait {
    fn set(&mut self, x: u32) -> &u32;
//~^ 14:34: 14:35: Method 'set': savefile-abi does not support methods returning references.
}

fn main() {}